src/main/docker/kubernetes-manifests/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: fga-java
    app.kubernetes.io/version: "1.0"
  name: fga-java
  namespace: test-grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fga-java
      app.kubernetes.io/version: "1.0"
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app.kubernetes.io/name: fga-java
        app.kubernetes.io/version: "1.0"
      namespace: test-grpc
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/raffaelespazzoli/fga-java:1.0
          imagePullPolicy: Always
          name: fga-java
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 9000
              name: grpc
              protocol: TCP
