src/main/docker/kubernetes-manifests/IstioIngressGatewayService.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: fga-java
    app.kubernetes.io/version: "1.0"
  name: grpc-ingressgateway
  namespace: istio-system
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"   
spec:
  ports:
    - name: http2
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  type: LoadBalancer
