src/main/docker/kubernetes-manifests/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: fga-java
    app.kubernetes.io/version: "1.0"
  name: fga-java
  namespace: test-grpc
spec:
  ports:
    # - name: http
    #   port: 80
    #   targetPort: 8080
    - name: grpc
      port: 9000
      targetPort: 9000
  selector:
    app.kubernetes.io/name: fga-java
    app.kubernetes.io/version: "1.0"
  type: ClusterIP
