src/main/docker/kubernetes-manifests/Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: mesh-gateway
  namespace: istio-system
  labels:
    app.kubernetes.io/name: fga-java
    app.kubernetes.io/version: "1.0"
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: grpc
        number: 9000
        protocol: GRPC
